--- a/kubernetes/apps/external-secrets/external-secrets/app/clustersecretstore.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/app/clustersecretstore.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: http://expanse.internal:7070
+      connectHost: http://10.1.0.4:7070
       vaults:
         Kubernetes: 1
       auth:
